[tool.poetry]
name = "test-git"
version = "0.1.1"
description = "this is a test project"
authors = ["juank218 <juancaquines@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
